@@ -1,3 +1,7 @@
+HEAD
+	Kludged around {min,max}depth and trailing slashes in path
+	names.
+
 0.28 Tuesday 18th May, 2004
 	exposed %X_tests and @stat_tests as package variables, and make a
 	_call_find method for File::Find::Rule::Filesys::Virtual
